ログとエラー処理追加